NLP TP/texts/robotics/robotics.stackexchange_0000033728.txt
Q:

rosmake ros_comm error

Trying rosmake ros_comm:
[ rosmake ] rosdep successfully installed all system dependencies               
[ rosmake ] Starting >>> tools/rospack                                          
[ rosmake ] Finished <<< tools/rospack                                          
[rosmake-0] Starting >>> roslib [ make ]                                        
[rosmake-1] Starting >>> rosbuild [ make ]                                      
[rosmake-1] Finished <<< rosbuild  No Makefile in package rosbuild              
[rosmake-2] Starting >>> std_srvs [ make ]                                      
[ rosmake ] All 17 linesoslib: 0.0 sec ] [ rosbuil... [ 3 Active 1/56 Complete ]
{-------------------------------------------------------------------------------
  mkdir -p bin
  cd build && cmake -Wdev -DCMAKE_TOOLCHAIN_FILE=`rospack find rosbuild`/rostoolchain.cmake  ..
  [rosbuild] Building package roslib
  [rosbuild] Error from syntax check of roslib/manifest.xml
    File "<string>", line 1
      import
           ^
  SyntaxError: invalid syntax
  CMake Error at /home/vinicius/ros/ros/core/rosbuild/private.cmake:87 (message):
    [rosbuild] Syntax check of roslib/manifest.xml failed; aborting
  Call Stack (most recent call first):
    /home/vinicius/ros/ros/core/rosbuild/public.cmake:154 (_rosbuild_check_manifest)
    CMakeLists.txt:3 (rosbuild_init)
  
  
  -- Configuring incomplete, errors occurred!

What's wrong?

Originally posted by Vinipsmaker on ROS Answers with karma: 83 on 2011-08-17
Post score: 0

Original comments
Comment by tfoote on 2011-08-17:
Please provide more information about how you installed ROS and got this error.  Especially the version of ROS you are running.  Guidelines for asking questions is posted at http://www.ros.org/wiki/Support

A:

This question does not have enough information to answer/debug.  Please see:
http://www.ros.org/wiki/Support
closing...

Originally posted by kwc with karma: 12244 on 2011-09-02
This answer was ACCEPTED on the original site
Post score: 0

